--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -54,6 +54,14 @@
   @media (min-width: breakpoint.$desktop) {
     margin: space.$s0 space.$s4;
   }
+
+  @media (min-width: breakpoint.$mobile) {
+    width: 2rem;
+  }
+
+  @media (min-width: breakpoint.$mini) {
+    width: 2rem;
+  }
 }
 
 .menuButton {
