User number issue (#8)
* task1

* task1

* task2

* task3

* task4

* task5

* task5

* task5

* task5

* task6

* task7

* change user number

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -27,7 +27,6 @@
 }
 
 .fixedContainer {
-  composes: container;
   position: fixed;
 }
 
@@ -128,8 +127,9 @@
 }
 
 .linkList {
-  composes: list;
   flex: 1;
+  padding: 0;
+  margin: 0;
 }
 
 .collapseMenuItem {
